--- a/c02/css/dynamic.css
+++ b/c02/css/dynamic.css
@@ -6,11 +6,49 @@
 	display: none;
 }
 
+.tab-menu {
+	border-bottom: 6px solid #b9d5dc;
+}
+
+.tab-menu > li {
+	float: left;
+	margin: 0 3px 0 0;
+}
+
+.tab-menu > li > a {
+	display: block;
+	padding: 8px 20px 4px;
+	background: #bbb;
+	border-radius: 5px 5px 0 0;
+	color: #fff;
+}
+
+.tab-menu > li > a:hover {
+	background: #a2a2a2;
+}
+
+.tab-menu > li > a:active {
+	background: #757575;
+}
+
+.tab-menu > li.selected > a {
+	background-color: #b9d5dc;
+	color: #fff;
+}
+
 /**
  * RESPONSIVE スマートフォン向けウィンドウ600ピクセル以下
  */
 
 @media screen and (max-width: 600px){
+	.tab-menu > li {
+		margin: 0 2px 0 0;
+	}
+
+	.tab-menu > li > a {
+		padding: 5px 5px 3px 5px;
+	}
+
 	.menubtn {
 		display: block;
 	}
