--- a/c02/css/dynamic.css
+++ b/c02/css/dynamic.css
@@ -45,6 +45,29 @@
 	display: none;
 }
 
+.gallery {
+	width: 510px;
+	margin: 0 auto;
+	padding: 20px;
+	background: #ededed;
+	border-radius: 5px;
+	line-height: 0;
+}
+
+.thumbnails {
+	margin: 10px 0 0 0;
+}
+
+.thumbnails li {
+	float: left;
+	margin: 0 2px 0 0;
+	border: 2px solid #ededed;
+}
+
+.thumbnails li.selected {
+	border: 2px solid #8ac2d0;
+}
+
 /**
  * RESPONSIVE スマートフォン向けウィンドウ600ピクセル以下
  */
@@ -81,5 +104,11 @@
 
 	.nav-global {
 		display: none;
+	}
+
+	.gallery {
+		width: 96%;
+		margin: 30px 0;
+		padding: 20px 2%;
 	}
 }
