--- a/c02/css/dynamic.css
+++ b/c02/css/dynamic.css
@@ -54,6 +54,14 @@
 	line-height: 0;
 }
 
+.mainimage {
+	text-align: center;
+}
+
+.mainimage > img {
+	max-width: 100%;
+}
+
 .thumbnails {
 	margin: 10px 0 0 0;
 }
