--- a/c03/css/dynamic.css
+++ b/c03/css/dynamic.css
@@ -131,3 +131,57 @@
 		font-size: 0.8em;
 	}
 }
+
+/**
+ * 03-06 スライドショー
+ */
+/* スライドショー全体のスタイル */
+.slide {
+	position: relative;
+	margin: 0 auto;
+	max-width: 960px;
+}
+.slide img {
+	max-width: 100%;
+}
+/* スライドショーのボタン */
+.slide a.prev,
+.slide a.next {
+	position: absolute;
+	display: block;
+	top: 45%;
+	width: 40px;
+	height: 40px;
+	text-indent: -5000px;
+	z-index: 10; /* ボタンを常に画像より上に配置 */
+}
+.slide a.prev {
+	background: url(../images/arrow-left1.png) 50% 50% no-repeat;
+	left: 0;
+}
+.slide a.prev:hover {
+	background: url(../images/arrow-left2.png) 50% 50% no-repeat;
+}
+.slide a.prev:active {
+	background: url(../images/arrow-left3.png) 50% 50% no-repeat;
+}
+.slide a.next {
+	background: url(../images/arrow-right1.png) 50% 50% no-repeat;
+	right: 0;
+}
+.slide a.next:hover {
+	background: url(../images/arrow-right2.png) 50% 50% no-repeat;
+}
+.slide a.next:active {
+	background: url(../images/arrow-right3.png) 50% 50% no-repeat;
+}
+
+/**
+ * RESPONSIVE: スマートフォン向けウィンドウ幅600px以下
+ */
+@media screen and (max-width:600px) {
+	.slide a.prev,
+	.slide a.next {
+		top: 40%;
+	}
+}
