--- a/c03/css/dynamic.css
+++ b/c03/css/dynamic.css
@@ -238,3 +238,15 @@ a:active.disabled.btn-details
 	cursor: default;
 	background-color: #b9d5dc;
 }
+
+/* 画像とテキストのブロック */
+#ajax-list > li {
+	overflow: hidden;
+	margin: 0 0 20px 0;
+}
+#ajax-list > li img {
+	margin: 0 10px 5px 0;
+	float: left;
+	border-radius: 5px;
+}
+
