--- a/c04/css/dynamic.css
+++ b/c04/css/dynamic.css
@@ -31,6 +31,24 @@
 	margin: 0 0 1em 0;
 	line-height: 1.8em;
 }
+/* 閉じるボタン */
+a.modal-close {
+	display: block;
+	background-image: url('../images/close.png');
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+a.modal-close:hover {
+	background-position: -40px 0;
+}
+a.modal-close:active {
+	background-position: -80px 0;
+}
 /* シェード */
 #shade {
 	position: fixed;
